add twitter card

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>FCC Project: Build a Camper Leaderboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Fresca|Passion+One" rel="stylesheet">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="@BenjaminBrooke3" />
+  <meta name="twitter:title" content="Free Code Camp Stats & Leaderboard">
+  <meta name="twitter:description" content="Look up your personal stats and ranking on Free Code Camp.  Just type in your username.  This page also displays FCC Leaderboards for the All-Time Brownie Points, as well as in the Last 30 Days">
+  <meta name="twitter:image" content="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1216298/CamperLeaderboard.png">
+  <link href="https://fonts.googleapis.com/css?family=Fresca|Passion+One" rel="stylesheet">
 <script src="https://use.fontawesome.com/e5ddde80f9.js"></script>
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css'>
