--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>FCC Project: Build a Camper Leaderboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:card" content="@BenjaminBrooke3" />
+  <meta name="twitter:site" content="@BenjaminBrooke3" />
   <meta name="twitter:title" content="Free Code Camp Stats & Leaderboard">
   <meta name="twitter:description" content="Look up your personal stats and ranking on Free Code Camp.  Just type in your username.  This page also displays FCC Leaderboards for the All-Time Brownie Points, as well as in the Last 30 Days">
   <meta name="twitter:image" content="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1216298/CamperLeaderboard.png">
